Livraison OpenInfra Python POO v0.29.24
